Lab2_Bison/RTSL.yy.output
Terminals which are not used

   STRING_LITERAL
   FUNC_NAME
   SIZEOF
   LBRACKET
   RBRACKET
   PTR_OP
   LEFT_OP
   RIGHT_OP
   AND
   OR
   SUB_ASSIGN
   LEFT_ASSIGN
   RIGHT_ASSIGN
   AND_ASSIGN
   RESTRICT
   VOLATILE


State 0 conflicts: 1 shift/reduce
State 1 conflicts: 1 shift/reduce
State 4 conflicts: 1 shift/reduce
State 26 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 82 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 110 conflicts: 3 shift/reduce
State 151 conflicts: 1 shift/reduce
State 154 conflicts: 2 shift/reduce
State 171 conflicts: 1 shift/reduce
State 174 conflicts: 18 shift/reduce
State 185 conflicts: 1 shift/reduce
State 186 conflicts: 1 shift/reduce
State 197 conflicts: 1 shift/reduce
State 203 conflicts: 1 shift/reduce
State 212 conflicts: 1 shift/reduce
State 216 conflicts: 1 shift/reduce


Grammar

    0 $accept: primary_statement $end

    1 primary_statement: primary_statement statement
    2                  | primary_statement shader_def
    3                  | primary_statement function_definition
    4                  | primary_statement declaration
    5                  | shader_def
    6                  | statement
    7                  | function_definition
    8                  | declaration

    9 rt: CAMERA
   10   | PRIMITIVE
   11   | TEXTURE
   12   | MATERIAL
   13   | LIGHT

   14 shader_states: RAYORIGIN
   15              | RAYDIRECTION
   16              | INVERSERAYDIRECTION
   17              | EPSILON
   18              | HITDISTANCE
   19              | SCREENCOORD
   20              | LENSCOORD
   21              | DU
   22              | DV
   23              | TIMESEED
   24              | BOUNDMIN
   25              | BOUNDMAX
   26              | DPDU
   27              | DPDV
   28              | SHADINGNORMAL
   29              | TEXTUREUV
   30              | TEXTUREUVW
   31              | DSDU
   32              | DSDV
   33              | PDF
   34              | TEXTURECOLOR
   35              | FLOATTEXTUREVALUE
   36              | DTDU
   37              | DTDV
   38              | LIGHTDISTANCE
   39              | LIGHTCOLOR
   40              | EMISSIONCOLOR
   41              | BSDFSEED
   42              | SAMPLECOLOR
   43              | BSDFVALUE
   44              | HITPOINT
   45              | GEOMETRICNORMAL
   46              | LIGHTDIRECTION

   47 shader_def: CLASS IDENTIFIER COLON rt SEMICOLON

   48 type_specifier: VOID
   49               | CHAR
   50               | SHORT
   51               | INT
   52               | LONG
   53               | FLOAT
   54               | DOUBLE
   55               | SIGNED
   56               | UNSIGNED
   57               | BOOL
   58               | VEC2
   59               | VEC3
   60               | VEC4
   61               | BVEC2
   62               | BVEC3
   63               | BVEC4
   64               | COLOR
   65               | CLASS

   66 operator: PLUS
   67         | MINUS
   68         | MUL
   69         | DIV
   70         | DEC
   71         | INC
   72         | ASSIGN
   73         | PLUS_ASSIGN
   74         | MINUS_ASSIGN
   75         | DIV_ASSIGN
   76         | MUL_ASSIGN
   77         | MOD_ASSIGN
   78         | EQUAL
   79         | NOT_EQUAL
   80         | LE
   81         | LT
   82         | GT
   83         | GE

   84 type_qualifier: CONST
   85               | PUBLIC
   86               | PRIVATE

   87 interface: INTERFACE_GENERATERAY
   88          | INTERFACE_INTERSECT
   89          | INTERFACE_COMPUTEBOUNDS
   90          | INTERFACE_COMPUTENORMAL
   91          | INTERFACE_COMPUTETEXTURECOORDINATES
   92          | INTERFACE_COMPUTEDERIVATIVES
   93          | INTERFACE_GENERATESAMPLE
   94          | INTERFACE_SAMPLEPDF
   95          | INTERFACE_LOOKUP
   96          | INTERFACE_SHADE
   97          | INTERFACE_BSDF
   98          | INTERFACE_SAMPLEBSDF
   99          | INTERFACE_EVALUATEPDF
  100          | INTERFACE_EMISSION
  101          | INTERFACE_ILLUMINATION

  102 specifier_qualifier_list: type_specifier specifier_qualifier_list
  103                         | type_specifier
  104                         | type_qualifier specifier_qualifier_list
  105                         | type_qualifier

  106 declaration: specifier_qualifier_list IDENTIFIER
  107            | specifier_qualifier_list IDENTIFIER COMMA
  108            | specifier_qualifier_list IDENTIFIER SEMICOLON
  109            | specifier_qualifier_list IDENTIFIER ASSIGN expression SEMICOLON

  110 declaration_list: declaration
  111                 | declaration_list declaration

  112 declarator: IDENTIFIER LPARENTHESIS RPARENTHESIS
  113           | IDENTIFIER LPARENTHESIS declaration_list RPARENTHESIS
  114           | interface LPARENTHESIS RPARENTHESIS
  115           | interface LPARENTHESIS declaration_list RPARENTHESIS
  116           | LPARENTHESIS declarator RPARENTHESIS
  117           | declarator LPARENTHESIS RPARENTHESIS
  118           | declarator LPARENTHESIS declaration_list RPARENTHESIS

  119 expression: expression operator expression
  120           | IDENTIFIER
  121           | I_CONSTANT
  122           | F_CONSTANT
  123           | function_call
  124           | shader_states
  125           | LPARENTHESIS expression RPARENTHESIS
  126           | /* empty */

  127 statement: expression_statement
  128          | assign_statement
  129          | if_statement
  130          | loop_statement
  131          | return_statement
  132          | compound_statement
  133          | function_call_statement

  134 expression_statement: SEMICOLON
  135                     | expression SEMICOLON

  136 assign_statement: IDENTIFIER ASSIGN expression SEMICOLON

  137 if_statement: IF LPARENTHESIS expression RPARENTHESIS statement ELSE statement
  138             | IF LPARENTHESIS expression RPARENTHESIS statement

  139 loop_statement: WHILE LPARENTHESIS expression RPARENTHESIS statement
  140               | FOR LPARENTHESIS expression SEMICOLON expression SEMICOLON expression RPARENTHESIS statement

  141 return_statement: RETURN expression SEMICOLON

  142 compound_statement: LBRACE RBRACE
  143                   | LBRACE block_statement RBRACE

  144 block_statement: block_item
  145                | block_statement block_item

  146 block_item: declaration
  147           | statement

  148 function_definition: specifier_qualifier_list declarator function_body_statement

  149 function_body_statement: LBRACE RBRACE
  150                        | LBRACE block_statement RBRACE

  151 function_call_statement: function_call SEMICOLON

  152 function_call: type_specifier LPARENTHESIS parameter_list RPARENTHESIS
  153              | IDENTIFIER LPARENTHESIS parameter_list RPARENTHESIS

  154 parameter_list: expression
  155               | expression COMMA expression
  156               | function_call COMMA expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 47 106 107 108 109 112 113 120 136 153
I_CONSTANT (259) 121
F_CONSTANT (260) 122
STRING_LITERAL (261)
FUNC_NAME (262)
SIZEOF (263)
LBRACE (264) 142 143 149 150
RBRACE (265) 142 143 149 150
LPARENTHESIS (266) 112 113 114 115 116 117 118 125 137 138 139 140
    152 153
RPARENTHESIS (267) 112 113 114 115 116 117 118 125 137 138 139 140
    152 153
LBRACKET (268)
RBRACKET (269)
COMMA (270) 107 155 156
SEMICOLON (271) 47 108 109 134 135 136 140 141 151
COLON (272) 47
ASSIGN (273) 72 109 136
LT (274) 81
LE (275) 80
GT (276) 82
GE (277) 83
EQUAL (278) 78
NOT_EQUAL (279) 79
PLUS (280) 66
MINUS (281) 67
MUL (282) 68
DIV (283) 69
PTR_OP (284)
INC (285) 71
DEC (286) 70
LEFT_OP (287)
RIGHT_OP (288)
AND (289)
OR (290)
MUL_ASSIGN (291) 76
DIV_ASSIGN (292) 75
MOD_ASSIGN (293) 77
PLUS_ASSIGN (294) 73
MINUS_ASSIGN (295) 74
SUB_ASSIGN (296)
LEFT_ASSIGN (297)
RIGHT_ASSIGN (298)
AND_ASSIGN (299)
CONST (300) 84
RESTRICT (301)
VOLATILE (302)
PUBLIC (303) 85
PRIVATE (304) 86
BOOL (305) 57
CHAR (306) 49
SHORT (307) 50
INT (308) 51
LONG (309) 52
SIGNED (310) 55
UNSIGNED (311) 56
FLOAT (312) 53
DOUBLE (313) 54
VOID (314) 48
VEC2 (315) 58
VEC3 (316) 59
VEC4 (317) 60
BVEC2 (318) 61
BVEC3 (319) 62
BVEC4 (320) 63
CLASS (321) 47 65
COLOR (322) 64
IF (323) 137 138
ELSE (324) 137
RETURN (325) 141
WHILE (326) 139
FOR (327) 140
PRIMITIVE (328) 10
CAMERA (329) 9
MATERIAL (330) 12
TEXTURE (331) 11
LIGHT (332) 13
RAYORIGIN (333) 14
RAYDIRECTION (334) 15
INVERSERAYDIRECTION (335) 16
EPSILON (336) 17
HITDISTANCE (337) 18
SCREENCOORD (338) 19
LENSCOORD (339) 20
DU (340) 21
DV (341) 22
TIMESEED (342) 23
BOUNDMIN (343) 24
BOUNDMAX (344) 25
DPDU (345) 26
DPDV (346) 27
SHADINGNORMAL (347) 28
TEXTUREUV (348) 29
TEXTUREUVW (349) 30
DSDU (350) 31
DSDV (351) 32
PDF (352) 33
TEXTURECOLOR (353) 34
FLOATTEXTUREVALUE (354) 35
DTDU (355) 36
DTDV (356) 37
LIGHTDISTANCE (357) 38
LIGHTCOLOR (358) 39
EMISSIONCOLOR (359) 40
BSDFSEED (360) 41
SAMPLECOLOR (361) 42
BSDFVALUE (362) 43
HITPOINT (363) 44
GEOMETRICNORMAL (364) 45
LIGHTDIRECTION (365) 46
INTERFACE_GENERATERAY (366) 87
INTERFACE_INTERSECT (367) 88
INTERFACE_COMPUTEBOUNDS (368) 89
INTERFACE_COMPUTENORMAL (369) 90
INTERFACE_COMPUTETEXTURECOORDINATES (370) 91
INTERFACE_COMPUTEDERIVATIVES (371) 92
INTERFACE_GENERATESAMPLE (372) 93
INTERFACE_SAMPLEPDF (373) 94
INTERFACE_LOOKUP (374) 95
INTERFACE_SHADE (375) 96
INTERFACE_BSDF (376) 97
INTERFACE_SAMPLEBSDF (377) 98
INTERFACE_EVALUATEPDF (378) 99
INTERFACE_EMISSION (379) 100
INTERFACE_ILLUMINATION (380) 101


Nonterminals, with rules where they appear

$accept (126)
    on left: 0
primary_statement (127)
    on left: 1 2 3 4 5 6 7 8, on right: 0 1 2 3 4
rt (128)
    on left: 9 10 11 12 13, on right: 47
shader_states (129)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
    32 33 34 35 36 37 38 39 40 41 42 43 44 45 46, on right: 124
shader_def (130)
    on left: 47, on right: 2 5
type_specifier (131)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
   , on right: 102 103 152
operator (132)
    on left: 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
   , on right: 119
type_qualifier (133)
    on left: 84 85 86, on right: 104 105
interface (134)
    on left: 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101,
    on right: 114 115
specifier_qualifier_list (135)
    on left: 102 103 104 105, on right: 102 104 106 107 108 109 148
declaration (136)
    on left: 106 107 108 109, on right: 4 8 110 111 146
declaration_list (137)
    on left: 110 111, on right: 111 113 115 118
declarator (138)
    on left: 112 113 114 115 116 117 118, on right: 116 117 118 148
expression (139)
    on left: 119 120 121 122 123 124 125 126, on right: 109 119 125
    135 136 137 138 139 140 141 154 155 156
statement (140)
    on left: 127 128 129 130 131 132 133, on right: 1 6 137 138 139
    140 147
expression_statement (141)
    on left: 134 135, on right: 127
assign_statement (142)
    on left: 136, on right: 128
if_statement (143)
    on left: 137 138, on right: 129
loop_statement (144)
    on left: 139 140, on right: 130
return_statement (145)
    on left: 141, on right: 131
compound_statement (146)
    on left: 142 143, on right: 132
block_statement (147)
    on left: 144 145, on right: 143 145 150
block_item (148)
    on left: 146 147, on right: 144 145
function_definition (149)
    on left: 148, on right: 3 7
function_body_statement (150)
    on left: 149 150, on right: 148
function_call_statement (151)
    on left: 151, on right: 133
function_call (152)
    on left: 152 153, on right: 123 151 156
parameter_list (153)
    on left: 154 155 156, on right: 152 153


state 0

    0 $accept: . primary_statement $end

    IDENTIFIER           shift, and go to state 1
    I_CONSTANT           shift, and go to state 2
    F_CONSTANT           shift, and go to state 3
    LBRACE               shift, and go to state 4
    LPARENTHESIS         shift, and go to state 5
    SEMICOLON            shift, and go to state 6
    CONST                shift, and go to state 7
    PUBLIC               shift, and go to state 8
    PRIVATE              shift, and go to state 9
    BOOL                 shift, and go to state 10
    CHAR                 shift, and go to state 11
    SHORT                shift, and go to state 12
    INT                  shift, and go to state 13
    LONG                 shift, and go to state 14
    SIGNED               shift, and go to state 15
    UNSIGNED             shift, and go to state 16
    FLOAT                shift, and go to state 17
    DOUBLE               shift, and go to state 18
    VOID                 shift, and go to state 19
    VEC2                 shift, and go to state 20
    VEC3                 shift, and go to state 21
    VEC4                 shift, and go to state 22
    BVEC2                shift, and go to state 23
    BVEC3                shift, and go to state 24
    BVEC4                shift, and go to state 25
    CLASS                shift, and go to state 26
    COLOR                shift, and go to state 27
    IF                   shift, and go to state 28
    RETURN               shift, and go to state 29
    WHILE                shift, and go to state 30
    FOR                  shift, and go to state 31
    RAYORIGIN            shift, and go to state 32
    RAYDIRECTION         shift, and go to state 33
    INVERSERAYDIRECTION  shift, and go to state 34
    EPSILON              shift, and go to state 35
    HITDISTANCE          shift, and go to state 36
    SCREENCOORD          shift, and go to state 37
    LENSCOORD            shift, and go to state 38
    DU                   shift, and go to state 39
    DV                   shift, and go to state 40
    TIMESEED             shift, and go to state 41
    BOUNDMIN             shift, and go to state 42
    BOUNDMAX             shift, and go to state 43
    DPDU                 shift, and go to state 44
    DPDV                 shift, and go to state 45
    SHADINGNORMAL        shift, and go to state 46
    TEXTUREUV            shift, and go to state 47
    TEXTUREUVW           shift, and go to state 48
    DSDU                 shift, and go to state 49
    DSDV                 shift, and go to state 50
    PDF                  shift, and go to state 51
    TEXTURECOLOR         shift, and go to state 52
    FLOATTEXTUREVALUE    shift, and go to state 53
    DTDU                 shift, and go to state 54
    DTDV                 shift, and go to state 55
    LIGHTDISTANCE        shift, and go to state 56
    LIGHTCOLOR           shift, and go to state 57
    EMISSIONCOLOR        shift, and go to state 58
    BSDFSEED             shift, and go to state 59
    SAMPLECOLOR          shift, and go to state 60
    BSDFVALUE            shift, and go to state 61
    HITPOINT             shift, and go to state 62
    GEOMETRICNORMAL      shift, and go to state 63
    LIGHTDIRECTION       shift, and go to state 64

    SEMICOLON  [reduce using rule 126 (expression)]
    $default   reduce using rule 126 (expression)

    primary_statement         go to state 65
    shader_states             go to state 66
    shader_def                go to state 67
    type_specifier            go to state 68
    type_qualifier            go to state 69
    specifier_qualifier_list  go to state 70
    declaration               go to state 71
    expression                go to state 72
    statement                 go to state 73
    expression_statement      go to state 74
    assign_statement          go to state 75
    if_statement              go to state 76
    loop_statement            go to state 77
    return_statement          go to state 78
    compound_statement        go to state 79
    function_definition       go to state 80
    function_call_statement   go to state 81
    function_call             go to state 82


state 1

  120 expression: IDENTIFIER .
  136 assign_statement: IDENTIFIER . ASSIGN expression SEMICOLON
  153 function_call: IDENTIFIER . LPARENTHESIS parameter_list RPARENTHESIS

    LPARENTHESIS  shift, and go to state 83
    ASSIGN        shift, and go to state 84

    ASSIGN    [reduce using rule 120 (expression)]
    $default  reduce using rule 120 (expression)


state 2

  121 expression: I_CONSTANT .

    $default  reduce using rule 121 (expression)


state 3

  122 expression: F_CONSTANT .

    $default  reduce using rule 122 (expression)


state 4

  142 compound_statement: LBRACE . RBRACE
  143                   | LBRACE . block_statement RBRACE

    IDENTIFIER           shift, and go to state 1
    I_CONSTANT           shift, and go to state 2
    F_CONSTANT           shift, and go to state 3
    LBRACE               shift, and go to state 4
    RBRACE               shift, and go to state 85
    LPARENTHESIS         shift, and go to state 5
    SEMICOLON            shift, and go to state 6
    CONST                shift, and go to state 7
    PUBLIC               shift, and go to state 8
    PRIVATE              shift, and go to state 9
    BOOL                 shift, and go to state 10
    CHAR                 shift, and go to state 11
    SHORT                shift, and go to state 12
    INT                  shift, and go to state 13
    LONG                 shift, and go to state 14
    SIGNED               shift, and go to state 15
    UNSIGNED             shift, and go to state 16
    FLOAT                shift, and go to state 17
    DOUBLE               shift, and go to state 18
    VOID                 shift, and go to state 19
    VEC2                 shift, and go to state 20
    VEC3                 shift, and go to state 21
    VEC4                 shift, and go to state 22
    BVEC2                shift, and go to state 23
    BVEC3                shift, and go to state 24
    BVEC4                shift, and go to state 25
    CLASS                shift, and go to state 86
    COLOR                shift, and go to state 27
    IF                   shift, and go to state 28
    RETURN               shift, and go to state 29
    WHILE                shift, and go to state 30
    FOR                  shift, and go to state 31
    RAYORIGIN            shift, and go to state 32
    RAYDIRECTION         shift, and go to state 33
    INVERSERAYDIRECTION  shift, and go to state 34
    EPSILON              shift, and go to state 35
    HITDISTANCE          shift, and go to state 36
    SCREENCOORD          shift, and go to state 37
    LENSCOORD            shift, and go to state 38
    DU                   shift, and go to state 39
    DV                   shift, and go to state 40
    TIMESEED             shift, and go to state 41
    BOUNDMIN             shift, and go to state 42
    BOUNDMAX             shift, and go to state 43
    DPDU                 shift, and go to state 44
    DPDV                 shift, and go to state 45
    SHADINGNORMAL        shift, and go to state 46
    TEXTUREUV            shift, and go to state 47
    TEXTUREUVW           shift, and go to state 48
    DSDU                 shift, and go to state 49
    DSDV                 shift, and go to state 50
    PDF                  shift, and go to state 51
    TEXTURECOLOR         shift, and go to state 52
    FLOATTEXTUREVALUE    shift, and go to state 53
    DTDU                 shift, and go to state 54
    DTDV                 shift, and go to state 55
    LIGHTDISTANCE        shift, and go to state 56
    LIGHTCOLOR           shift, and go to state 57
    EMISSIONCOLOR        shift, and go to state 58
    BSDFSEED             shift, and go to state 59
    SAMPLECOLOR          shift, and go to state 60
    BSDFVALUE            shift, and go to state 61
    HITPOINT             shift, and go to state 62
    GEOMETRICNORMAL      shift, and go to state 63
    LIGHTDIRECTION       shift, and go to state 64

    SEMICOLON  [reduce using rule 126 (expression)]
    $default   reduce using rule 126 (expression)

    shader_states             go to state 66
    type_specifier            go to state 68
    type_qualifier            go to state 69
    specifier_qualifier_list  go to state 87
    declaration               go to state 88
    expression                go to state 72
    statement                 go to state 89
    expression_statement      go to state 74
    assign_statement          go to state 75
    if_statement              go to state 76
    loop_statement            go to state 77
    return_statement          go to state 78
    compound_statement        go to state 79
    block_statement           go to state 90
    block_item                go to state 91
    function_call_statement   go to state 81
    function_call             go to state 82


state 5

  125 expression: LPARENTHESIS . expression RPARENTHESIS

    IDENTIFIER           shift, and go to state 92
    I_CONSTANT           shift, and go to state 2
    F_CONSTANT           shift, and go to state 3
    LPARENTHESIS         shift, and go to state 5
    BOOL                 shift, and go to state 10
    CHAR                 shift, and go to state 11
    SHORT                shift, and go to state 12
    INT                  shift, and go to state 13
    LONG                 shift, and go to state 14
    SIGNED               shift, and go to state 15
    UNSIGNED             shift, and go to state 16
    FLOAT                shift, and go to state 17
    DOUBLE               shift, and go to state 18
    VOID                 shift, and go to state 19
    VEC2                 shift, and go to state 20
    VEC3                 shift, and go to state 21
    VEC4                 shift, and go to state 22
    BVEC2                shift, and go to state 23
    BVEC3                shift, and go to state 24
    BVEC4                shift, and go to state 25
    CLASS                shift, and go to state 86
    COLOR                shift, and go to state 27
    RAYORIGIN            shift, and go to state 32
    RAYDIRECTION         shift, and go to state 33
    INVERSERAYDIRECTION  shift, and go to state 34
    EPSILON              shift, and go to state 35
    HITDISTANCE          shift, and go to state 36
    SCREENCOORD          shift, and go to state 37
    LENSCOORD            shift, and go to state 38
    DU                   shift, and go to state 39
    DV                   shift, and go to state 40
    TIMESEED             shift, and go to state 41
    BOUNDMIN             shift, and go to state 42
    BOUNDMAX             shift, and go to state 43
    DPDU                 shift, and go to state 44
    DPDV                 shift, and go to state 45
    SHADINGNORMAL        shift, and go to state 46
    TEXTUREUV            shift, and go to state 47
    TEXTUREUVW           shift, and go to state 48
    DSDU                 shift, and go to state 49
    DSDV                 shift, and go to state 50
    PDF                  shift, and go to state 51
    TEXTURECOLOR         shift, and go to state 52
    FLOATTEXTUREVALUE    shift, and go to state 53
    DTDU                 shift, and go to state 54
    DTDV                 shift, and go to state 55
    LIGHTDISTANCE        shift, and go to state 56
    LIGHTCOLOR           shift, and go to state 57
    EMISSIONCOLOR        shift, and go to state 58
    BSDFSEED             shift, and go to state 59
    SAMPLECOLOR          shift, and go to state 60
    BSDFVALUE            shift, and go to state 61
    HITPOINT             shift, and go to state 62
    GEOMETRICNORMAL      shift, and go to state 63
    LIGHTDIRECTION       shift, and go to state 64

    $default  reduce using rule 126 (expression)

    shader_states   go to state 66
    type_specifier  go to state 93
    expression      go to state 94
    function_call   go to state 95


state 6

  134 expression_statement: SEMICOLON .

    $default  reduce using rule 134 (expression_statement)


state 7

   84 type_qualifier: CONST .

    $default  reduce using rule 84 (type_qualifier)


state 8

   85 type_qualifier: PUBLIC .

    $default  reduce using rule 85 (type_qualifier)


state 9

   86 type_qualifier: PRIVATE .

    $default  reduce using rule 86 (type_qualifier)


state 10

   57 type_specifier: BOOL .

    $default  reduce using rule 57 (type_specifier)


state 11

   49 type_specifier: CHAR .

    $default  reduce using rule 49 (type_specifier)


state 12

   50 type_specifier: SHORT .

    $default  reduce using rule 50 (type_specifier)


state 13

   51 type_specifier: INT .

    $default  reduce using rule 51 (type_specifier)


state 14

   52 type_specifier: LONG .

    $default  reduce using rule 52 (type_specifier)


state 15

   55 type_specifier: SIGNED .

    $default  reduce using rule 55 (type_specifier)


state 16

   56 type_specifier: UNSIGNED .

    $default  reduce using rule 56 (type_specifier)


state 17

   53 type_specifier: FLOAT .

    $default  reduce using rule 53 (type_specifier)


state 18

   54 type_specifier: DOUBLE .

    $default  reduce using rule 54 (type_specifier)


state 19

   48 type_specifier: VOID .

    $default  reduce using rule 48 (type_specifier)


state 20

   58 type_specifier: VEC2 .

    $default  reduce using rule 58 (type_specifier)


state 21

   59 type_specifier: VEC3 .

    $default  reduce using rule 59 (type_specifier)


state 22

   60 type_specifier: VEC4 .

    $default  reduce using rule 60 (type_specifier)


state 23

   61 type_specifier: BVEC2 .

    $default  reduce using rule 61 (type_specifier)


state 24

   62 type_specifier: BVEC3 .

    $default  reduce using rule 62 (type_specifier)


state 25

   63 type_specifier: BVEC4 .

    $default  reduce using rule 63 (type_specifier)


state 26

   47 shader_def: CLASS . IDENTIFIER COLON rt SEMICOLON
   65 type_specifier: CLASS .

    IDENTIFIER  shift, and go to state 96

    IDENTIFIER  [reduce using rule 65 (type_specifier)]
    $default    reduce using rule 65 (type_specifier)


state 27

   64 type_specifier: COLOR .

    $default  reduce using rule 64 (type_specifier)


state 28

  137 if_statement: IF . LPARENTHESIS expression RPARENTHESIS statement ELSE statement
  138             | IF . LPARENTHESIS expression RPARENTHESIS statement

    LPARENTHESIS  shift, and go to state 97


state 29

  141 return_statement: RETURN . expression SEMICOLON

    IDENTIFIER           shift, and go to state 92
    I_CONSTANT           shift, and go to state 2
    F_CONSTANT           shift, and go to state 3
    LPARENTHESIS         shift, and go to state 5
    BOOL                 shift, and go to state 10
    CHAR                 shift, and go to state 11
    SHORT                shift, and go to state 12
    INT                  shift, and go to state 13
    LONG                 shift, and go to state 14
    SIGNED               shift, and go to state 15
    UNSIGNED             shift, and go to state 16
    FLOAT                shift, and go to state 17
    DOUBLE               shift, and go to state 18
    VOID                 shift, and go to state 19
    VEC2                 shift, and go to state 20
    VEC3                 shift, and go to state 21
    VEC4                 shift, and go to state 22
    BVEC2                shift, and go to state 23
    BVEC3                shift, and go to state 24
    BVEC4                shift, and go to state 25
    CLASS                shift, and go to state 86
    COLOR                shift, and go to state 27
    RAYORIGIN            shift, and go to state 32
    RAYDIRECTION         shift, and go to state 33
    INVERSERAYDIRECTION  shift, and go to state 34
    EPSILON              shift, and go to state 35
    HITDISTANCE          shift, and go to state 36
    SCREENCOORD          shift, and go to state 37
    LENSCOORD            shift, and go to state 38
    DU                   shift, and go to state 39
    DV                   shift, and go to state 40
    TIMESEED             shift, and go to state 41
    BOUNDMIN             shift, and go to state 42
    BOUNDMAX             shift, and go to state 43
    DPDU                 shift, and go to state 44
    DPDV                 shift, and go to state 45
    SHADINGNORMAL        shift, and go to state 46
    TEXTUREUV            shift, and go to state 47
    TEXTUREUVW           shift, and go to state 48
    DSDU                 shift, and go to state 49
    DSDV                 shift, and go to state 50
    PDF                  shift, and go to state 51
    TEXTURECOLOR         shift, and go to state 52
    FLOATTEXTUREVALUE    shift, and go to state 53
    DTDU                 shift, and go to state 54
    DTDV                 shift, and go to state 55
    LIGHTDISTANCE        shift, and go to state 56
    LIGHTCOLOR           shift, and go to state 57
    EMISSIONCOLOR        shift, and go to state 58
    BSDFSEED             shift, and go to state 59
    SAMPLECOLOR          shift, and go to state 60
    BSDFVALUE            shift, and go to state 61
    HITPOINT             shift, and go to state 62
    GEOMETRICNORMAL      shift, and go to state 63
    LIGHTDIRECTION       shift, and go to state 64

    $default  reduce using rule 126 (expression)

    shader_states   go to state 66
    type_specifier  go to state 93
    expression      go to state 98
    function_call   go to state 95


state 30

  139 loop_statement: WHILE . LPARENTHESIS expression RPARENTHESIS statement

    LPARENTHESIS  shift, and go to state 99


state 31

  140 loop_statement: FOR . LPARENTHESIS expression SEMICOLON expression SEMICOLON expression RPARENTHESIS statement

    LPARENTHESIS  shift, and go to state 100


state 32

   14 shader_states: RAYORIGIN .

    $default  reduce using rule 14 (shader_states)


state 33

   15 shader_states: RAYDIRECTION .

    $default  reduce using rule 15 (shader_states)


state 34

   16 shader_states: INVERSERAYDIRECTION .

    $default  reduce using rule 16 (shader_states)


state 35

   17 shader_states: EPSILON .

    $default  reduce using rule 17 (shader_states)


state 36

   18 shader_states: HITDISTANCE .

    $default  reduce using rule 18 (shader_states)


state 37

   19 shader_states: SCREENCOORD .

    $default  reduce using rule 19 (shader_states)


state 38

   20 shader_states: LENSCOORD .

    $default  reduce using rule 20 (shader_states)


state 39

   21 shader_states: DU .

    $default  reduce using rule 21 (shader_states)


state 40

   22 shader_states: DV .

    $default  reduce using rule 22 (shader_states)


state 41

   23 shader_states: TIMESEED .

    $default  reduce using rule 23 (shader_states)


state 42

   24 shader_states: BOUNDMIN .

    $default  reduce using rule 24 (shader_states)


state 43

   25 shader_states: BOUNDMAX .

    $default  reduce using rule 25 (shader_states)


state 44

   26 shader_states: DPDU .

    $default  reduce using rule 26 (shader_states)


state 45

   27 shader_states: DPDV .

    $default  reduce using rule 27 (shader_states)


state 46

   28 shader_states: SHADINGNORMAL .

    $default  reduce using rule 28 (shader_states)


state 47

   29 shader_states: TEXTUREUV .

    $default  reduce using rule 29 (shader_states)


state 48

   30 shader_states: TEXTUREUVW .

    $default  reduce using rule 30 (shader_states)


state 49

   31 shader_states: DSDU .

    $default  reduce using rule 31 (shader_states)


state 50

   32 shader_states: DSDV .

    $default  reduce using rule 32 (shader_states)


state 51

   33 shader_states: PDF .

    $default  reduce using rule 33 (shader_states)


state 52

   34 shader_states: TEXTURECOLOR .

    $default  reduce using rule 34 (shader_states)


state 53

   35 shader_states: FLOATTEXTUREVALUE .

    $default  reduce using rule 35 (shader_states)


state 54

   36 shader_states: DTDU .

    $default  reduce using rule 36 (shader_states)


state 55

   37 shader_states: DTDV .

    $default  reduce using rule 37 (shader_states)


state 56

   38 shader_states: LIGHTDISTANCE .

    $default  reduce using rule 38 (shader_states)


state 57

   39 shader_states: LIGHTCOLOR .

    $default  reduce using rule 39 (shader_states)


state 58

   40 shader_states: EMISSIONCOLOR .

    $default  reduce using rule 40 (shader_states)


state 59

   41 shader_states: BSDFSEED .

    $default  reduce using rule 41 (shader_states)


state 60

   42 shader_states: SAMPLECOLOR .

    $default  reduce using rule 42 (shader_states)


state 61

   43 shader_states: BSDFVALUE .

    $default  reduce using rule 43 (shader_states)


state 62

   44 shader_states: HITPOINT .

    $default  reduce using rule 44 (shader_states)


state 63

   45 shader_states: GEOMETRICNORMAL .

    $default  reduce using rule 45 (shader_states)


state 64

   46 shader_states: LIGHTDIRECTION .

    $default  reduce using rule 46 (shader_states)


state 65

    0 $accept: primary_statement . $end
    1 primary_statement: primary_statement . statement
    2                  | primary_statement . shader_def
    3                  | primary_statement . function_definition
    4                  | primary_statement . declaration
